# ZipInt

./: .gitmodules  CMakeLists.txt  README.md  ZipInt.hpp
tests/: CMakeLists.txt
tests/tests/: TestContainer.cpp  TestRead.cpp  TestSignedDefault.cpp  TestUnsignedDefault.cpp  ZipIntTester.hpp
